# cosc494_proj3

src/cosc494_dep/control_interfaces/: CMakeLists.txt  package.xml
src/cosc494_dep/mushr_description/: CMakeLists.txt  package.xml
src/cosc494_dep/mushr_description/robots/: mushr_nano.urdf.xacro  mushr_tx2.urdf.xacro
src/cosc494_dep/mushr_description/rviz/: default.rviz
src/cosc494_dep/mushr_interfaces/: CMakeLists.txt  package.xml
src/cosc494_dep/mushr_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/cosc494_dep/mushr_sim/launch/: launch_car_sim_proj1.py
src/cosc494_dep/mushr_sim/mushr_sim/: clicked_point_to_reposition.py  fake_localization.py  fake_urg.py  fake_vesc_driver.py  keyboard_teleop_terminal.py  mushr_sim.py  utils.py
src/cosc494_dep/range_libc/pywrapper/: RangeLibc.pyx  setup.py
src/cosc494_dep/range_libc/pywrapper/range_libc.egg-info/: PKG-INFO  SOURCES.txt
src/cosc494_dep/vesc/: LICENSE
src/cosc494_dep/vesc/vesc_ackermann/: CMakeLists.txt
src/cosc494_dep/vesc/vesc_ackermann/src/: ackermann_to_vesc.cpp  vesc_to_odom.cpp
src/cosc494_dep/vesc/vesc_driver/: CMakeLists.txt
src/cosc494_dep/vesc/vesc_msgs/: CMakeLists.txt
src/proj1/: package.xml  setup.cfg  setup.py
src/proj1/launch/: launch_fibonacci.py  launch_path_publisher.py
src/proj1/plans/: shape_8.txt  straight_line.txt  tight_shape_8.txt
src/proj1/proj1/: compare_norm.py  fibonacci.py  path_publisher.py  pose_listener.py  utils.py
src/proj2/: package.xml  setup.cfg  setup.py
src/proj2/config/: parameters.yaml  parameters_ros2.yaml
src/proj2/launch/: launch_car_sim_proj2.py  launch_car_sim_proj2_pf.py  launch_particle_filter.py
src/proj2/maps/: map1.yaml  map2.yaml
src/proj2/proj2/: make_motion_model_plot.py  make_sensor_model_plot.py  motion_model.py  particle_filter.py  particle_filter_v1.py  particle_filter_v2.py  resampler.py  sensor_model.py
src/proj3/: package.xml  setup.cfg  setup.py
src/proj3/config/: parameters_control.yaml
src/proj3/launch/: launch_car_sim_proj3.py
src/proj3/proj3/: base_controller.py  control_node.py  control_ros2.py  mpc.py  path_generator.py  path_sender.py  pid.py  purepursuit.py
