<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>proj1</name>
  <version>0.0.0</version>
  <description>COSC494/594: Project 1 package</description>

  <maintainer email="fliu33@utk.edu">fei</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend> <!-- only if using Odometry -->
  <depend>std_msgs</depend>

  <!-- Python dependency (not strictly required if system-installed) -->
  <exec_depend>python3-numpy</exec_depend>

  <!-- Testing -->
  <test_depend>python3-pytest</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>pytest-timeout</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>