<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>mushr_interfaces</name>
  <version>0.0.1</version>
  <description>Interface definitions (srv/msg) for MuSHR ROS2 system</description>

  <maintainer email="fei@todo.todo">Fei Liu</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencies used inside srv/msg files -->
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <!-- Required for interface-only packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>