<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mushr_sim</name>
  <version>0.0.1</version>
  <description>MuSHR simulator (ROS2 Python implementation)</description>

  <maintainer email="fei@todo.todo">Fei Liu</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Python build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>mushr_interfaces</exec_depend>

  <!-- Message dependencies used in your Python code -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <!-- If using numpy -->
  <exec_depend>python3-numpy</exec_depend>

  <!-- If using Tkinter (keyboard teleop) -->
  <exec_depend>python3-tk</exec_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Optional linting -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
